--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.1",
     "formik": "^2.4.6",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.554.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
     "react-spinners": "^0.17.0",
     "socket": "^2.0.10",
